--- a/prac_1_272/HTML/person2.html
+++ b/prac_1_272/HTML/person2.html
@@ -3,8 +3,83 @@
 <head>
     <meta charset="utf-8" />
     <title>Mary Jane</title>
+    <link rel="stylesheet" href="../Content/myStyles.css" />
 </head>
 <body>
-    <h2 class="nameHead">Person 2 - Mary Jane</h2>
+    <div class="container">
+        <h2 class="nameHead">Person 2 - Mary Jane</h2>
+
+        <hr />
+        <!--NAV BAR:--------------------------------------------------------------------------------------------------------------->
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" href="main.html">MAIN</a>
+                        <a class="nav-link" href="/Student/StudentList">LIST</a>
+                        <a class="nav-link" href="person1.html">Person 1</a>
+                        <a class="nav-link" id="active-nav" href="person2.html">Person 2</a>
+                        <a class="nav-link" href="person3.html">Person 3</a>
+                        <a class="nav-link" href="person4.html">Person 4</a>
+                        <a class="nav-link" href="person5.html">Person 5</a>
+                        <a onclick="javascript:history.back()">BACK</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!------------------------------------------------------------------------------------------------------------------------->
+        <hr />
+
+        <!--BIO:------------------------------------------------------------------------------------------------------------------->
+        <div class="inner-container">
+            <h3 class="content-header">Biography and Background</h3>
+            <div class="bio-flex">
+                <img src="images/mary.png" class="bio-img" width="250" />
+                <p>Mary Jane is a multidisciplinary professional with a strong background in creative media, project management, and community engagement. Known for her dynamic approach and attention to detail, she has contributed to a wide range of successful campaigns and digital projects. Mary thrives in collaborative environments where storytelling, design, and strategy come together. Outside of work, she’s an avid traveler, writer, and advocate for women in tech and the arts.</p>
+
+            </div>
+        </div>
+        <!------------------------------------------------------------------------------------------------------------------------->
+        <br />
+        <div class="inner-container">
+            <h3 class="content-header">Hobbies</h3>
+            <div class="bio-flex-right">
+                <img src="images/hobby2.png" class="bio-img-right" width="200"/>
+                <p>Mary loves traveling, journaling, and visiting art exhibits. She’s passionate about creative writing, volunteers for community arts programs, and is an advocate for women in technology and the creative industries.</p>
+            </div>
+
+        </div>
+    
+    <br />
+    <div class="inner-container">
+        <h3 class="content-header">Projects and Languages</h3>
+        <p>The following lists Mary's projects and proficient languages</p>
+
+        <div class="list-container">
+            <div class="list-section">
+                <h4 class="content-header">Projects</h4>
+                <ul class="list">
+                    <li>Digital zine on women in tech</li>
+                    <li>Scroll-based story site</li>
+                    <li>Virtual art gallery</li>
+                </ul>
+            </div>
+
+            <div class="list-section">
+                <h4 class="content-header">Languages</h4>
+                <ul class="list">
+                    <li>C++</li>
+                    <li>Javascript</li>
+                    <li>Python</li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+    </div>
+    <!--SCRIPTS-->
+    <script src="../Scripts/jquery-3.7.0.js"></script>
+    <script src="../Scripts/bootstrap.js"></script>
 </body>
 </html>
