--- a/prac_1_272/HTML/person3.html
+++ b/prac_1_272/HTML/person3.html
@@ -2,11 +2,86 @@
 <html>
 <head>
     <meta charset="utf-8" />
-
+    <link rel="stylesheet" href="../Content/myStyles.css" />
     <title>James Bond</title>
 </head>
 <body>
 
-    <h2 class="nameHead">Person 3 - James Bond</h2>
+    <div class="container">
+        <h2 class="nameHead">Person 3 - James Bond</h2>
+
+        <hr />
+        <!--NAV BAR:--------------------------------------------------------------------------------------------------------------->
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" href="main.html">MAIN</a>
+                        <a class="nav-link" href="../Views/Student/StudentList.cshtml">LIST</a>
+                        <a class="nav-link" href="person1.html">Person 1</a>
+                        <a class="nav-link" href="person2.html">Person 2</a>
+                        <a class="nav-link" id="active-nav" href="person3.html">Person 3</a>
+                        <a class="nav-link" href="person4.html">Person 4</a>
+                        <a class="nav-link" href="person5.html">Person 5</a>
+                        <a onclick="javascript:history.back()">BACK</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!------------------------------------------------------------------------------------------------------------------------->
+        <hr />
+
+
+        <!--BIO:------------------------------------------------------------------------------------------------------------------->
+        <div class="inner-container">
+            <h3 class="content-header">Biography and Background</h3>
+            <div class=bio-flex>
+                <img src="images/james.png" class="bio-img" width="250" />
+                <p>James Bond is a results-driven professional with expertise in business development, operations, and strategic planning. With a reputation for reliability and leadership, James has helped organizations streamline processes, optimize performance, and grow sustainably. His analytical mindset and strong communication skills make him a valuable asset in both corporate and entrepreneurial settings. Outside of work, James enjoys hiking, volunteering, and staying current with industry trends.</p>
+            </div>
+
+        </div>
+        <!------------------------------------------------------------------------------------------------------------------------->
+        <br />
+        <div class="inner-container">
+            <h3 class="content-header">Hobbies</h3>
+            <div class="bio-flex-right">
+                <img src="images/hobby3.png" class="bio-img-right" width="200"/>
+                <p>Outside of work, James enjoys hiking, reading about global economics, and tinkering with smart home gadgets. He’s also an amateur chef who enjoys experimenting with international cuisine on weekends.</p>
+            </div>
+
+        </div>
+        <br />
+        <div class="inner-container">
+            <h3 class="content-header">Projects and Languages</h3>
+            <p>The following lists James' projects and proficient languages</p>
+
+            <div class="list-container">
+                <div class="list-section">
+                    <h4 class="content-header">Projects</h4>
+                    <ul class="list">
+                        <li>CRM dashboard (Flask)</li>
+                        <li>Market trends visualizer</li>
+                        <li>Notion productivity system</li>
+                    </ul>
+                </div>
+
+                <div class="list-section">
+                    <h4 class="content-header">Languages</h4>
+                    <ul class="list">
+                        <li>PHP</li>
+                        <li>C++</li>
+                        <li>Java</li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!--SCRIPTS-->
+    <script src="../Scripts/jquery-3.7.0.js"></script>
+    <script src="../Scripts/bootstrap.js"></script>
 </body>
 </html>
