--- a/prac_1_272/HTML/person5.html
+++ b/prac_1_272/HTML/person5.html
@@ -2,10 +2,85 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Mike WazowskiMike</title>
+    <title>Mike Wazowski</title>
+    <link rel="stylesheet" href="../Content/myStyles.css" />
+
 </head>
 <body>
+    <div class="container">
+        <h2 class="nameHead">Person 5 - Mike Wazowski</h2>
+        <hr />
+        <!--NAV BAR:--------------------------------------------------------------------------------------------------------------->
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
 
-    <h2 class="nameHead">Person 5 - Jenna Wazowski</h2>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" href="main.html">MAIN</a>
+                        <a class="nav-link" href="../Views/Student/StudentList.cshtml">LIST</a>
+                        <a class="nav-link" href="person1.html">Person 1</a>
+                        <a class="nav-link" href="person2.html">Person 2</a>
+                        <a class="nav-link" href="person3.html">Person 3</a>
+                        <a class="nav-link" href="person4.html">Person 4</a>
+                        <a class="nav-link" id="active-nav" href="person5.html">Person 5</a>
+                        <a onclick="javascript:history.back()">BACK</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!------------------------------------------------------------------------------------------------------------------------->
+        <hr />
+
+        <!--BIO:------------------------------------------------------------------------------------------------------------------->
+        <div class="inner-container">
+            <h3 class="content-header">Biography and Background</h3>
+            <div class="bio-flex">
+                <img src="images/mike.png" class="bio-img" width="250" />
+                <p>Mike Wazowski is a dedicated creative with a sharp eye for detail and a passion for communication and storytelling. With experience in media production, branding, and public speaking, Mike brings energy and precision to every project he tackles. He thrives in dynamic environments where innovation and collaboration intersect. Outside of work, Mike enjoys improv comedy, exploring animation history, and connecting with creative communities.</p>
+
+            </div>
+
+        </div>
+        <!------------------------------------------------------------------------------------------------------------------------->
+        <br />
+        <div class="inner-container">
+            <h3 class="content-header">Hobbies</h3>
+            <div class="bio-flex-right">
+                <img src="images/hobby5.png" class="bio-img-right" width="200"/>
+                <p>Mike enjoys improv comedy, sketching, and exploring the history of animation. He’s active in local creative groups, loves hosting trivia nights, and is always on the lookout for new storytelling formats and tools.</p>
+            </div>
+
+        </div>
+        <br />
+        <div class="inner-container">
+            <h3 class="content-header">Projects and Languages</h3>
+            <p>The following lists Mike's projects and proficient languages</p>
+
+            <div class="list-container">
+                <div class="list-section">
+                    <h4 class="content-header">Projects</h4>
+                    <ul class="list">
+                        <li>Animation history podcast</li>
+                        <li>Story tool for writers</li>
+                        <li>Canvas sketchpad portfolio</li>
+                    </ul>
+                </div>
+
+                <div class="list-section">
+                    <h4 class="content-header">Languages</h4>
+                    <ul class="list">
+                        <li>React</li>
+                        <li>C++</li>
+                        <li>Python</li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!--SCRIPTS-->
+    <script src="../Scripts/jquery-3.7.0.js"></script>
+    <script src="../Scripts/bootstrap.js"></script>
 </body>
 </html>
